2014-05-05  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/newsletter/issue_creation.php: Fixes and
	improvements on the TinyMCE editor. Added an option
	to enable or disable the TinyMCE editor.

2014-05-05  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/leads/lead_detail.php,
	  operation/leads/lead_pipeline.php,
	  operation/leads/lead_statistics.php: Improved the
	not owned leads filter.

2014-05-05  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/leads/lead_detail.php,
	  operation/leads/lead_pipeline.php,
	  operation/leads/lead_statistics.php: Now is possible
	to search the not owned leads only.

2014-05-05  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/integria_cron.php: Modified the function
	"run_auto_incident_close" to disable the tickets close
	if the value is empty or negative.

	* include/help/en/help_auto_incident_close.php,
	  include/help/es/help_auto_incident_close.php: Updated
	the help to explain how to disable the auto incident
	close functionality.

2014-04-30  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/incidents/incident_detail.php: Now the page
	makes a redirect to the incident dashboard detail when
	a ticket is created, instead of loading the incident
	dashboard detail script.

2014-04-30  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* integria_demo.sql,
	  godmode/setup/setup_crm.php,
	  include/functions_config.php,
	  operation/leads/lead_detail.php,
	  operation/leads/template_manager.php: Removed the lead
	company filter.

2014-04-30  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/config_process.php: Now the url use the 'baseurl'
	config token to build the complete 'base_url'.

	* install.php: Now is possible to save a relative url path
	from the server to integria. This should fix the images error.

2014-04-30  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/companies/company_detail.php: Verify
	deletion of companies.
