@@ -1,3 +1,14 @@
+2014-05-07  Vanessa Gil <vanessa.gil@artica.es>
+	
+	* godmode/setup/setup_mail.php
+	  include/functions_config.php
+	  include/integria_cron.php
+	  operation/newsletter/address_definition.php
+	  operation/newsletter/issue_definition.php
+	  operation/newsletter/newsletter_definition.php: Improvements
+	in newsletters.
+	
+
 2014-05-05  Alejandro Gallardo <alejandro.gallardo@artica.es>
 
 	* operation/newsletter/issue_creation.php: Fixes and
